<resources>
    <string name="app_name">Jantung</string>
    <string name="welcome_name">Welcome to Jantung</string>

    <!--APP CONFIG-->
    <string name="http_url">http://%s/api</string>
    <string name="mqtt_url">tcp://%s:1883</string>
    <string name="server_ip_address">192.168.43.12</string>
    <string name="server_http_port">3000</string>
    <!--<string name="server_ip_address">192.168.137.1</string>-->
    <string name="login_url">/login</string>
    <string name="register_url">/register</string>

    <!--LOGIN PAGE-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="setup_ip">Setup IP</string>
    <string name="example_ip">192.168.0.1</string>
    <string name="example_port">3000</string>

    <!--HOME PAGE-->
    <string name="image_condition">Image Condition</string>
    <string name="add_device">Add a family/friend</string>
    <string name="device_id">Device Id</string>
    <string name="device_pass">Device Password</string>
    <string name="about">About</string>
    <string name="notification">Notifications</string>
    <string name="detail">Detail</string>

    <!--REGISTER PAGE-->
    <string name="tutor1">1. Follow first boot instruction of Jantung Device, You should found it in the box</string>
    <string name="tutor2">2. Fill registration form on Jantung App, Device Id and Password is printed on boot instruction</string>
    <string name="tutor3">3. A device is locked to one account only</string>
    <string name="tutor4">4. To add family/friend device simply use add on home page then insert device id and password</string>
    <string name="error_form">"Please fill this field"</string>

    <string name="image_tutorial">Image Tutorial</string>
    <string name="fullname">Full Name</string>
    <string name="address">Address</string>
    <string name="emergency_number">Emergency Phone (Family/Friend)</string>
    <string name="user_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="terms_check">*By registering, you are agree to Jantung Terms and Conditions
        <![CDATA[
            <a href="http://google.com">Read More</a>
        ]]>
    </string>

    <!--NOTIFICATION PAGE-->
    <string name="outgoing_message">You send monitor request</string>
    <string name="outgoing_message_confirm">Waiting for confirmation</string>
    <string name="incoming_message">You got a monitor request</string>
    <string name="incoming_message_confirm">you need to confirm</string>

    <!--DETAIL PAGE-->
    <string name="card_transition">Card Transition</string>
    <string name="key_user_name">keyUserName</string>
    <string name="key_name">keyName</string>
    <string name="key_id">keyId</string>
    <string name="key_gender">keyGender</string>
    <string name="key_rate">keyRate</string>
    <string name="key_condition">keyCondition</string>
    <string name="remove_friend">remove friend</string>
    <string name="action_call">action call</string>
    <string name="action_sms">action sms</string>
    <string name="friend_delete_success">Friend Deleted</string>
    <string name="no_phone_num">No phone number available</string>

</resources>
