<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/item_image"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/image_condition"
            android:src="@drawable/ic_error_green"
            android:layout_width="32dp"
            android:layout_height="32dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/item_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/item_detail"
                android:text="@string/device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/action_call"
                android:id="@+id/button_action"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_grey_button"
                android:src="@drawable/ic_action_call"
                android:padding="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"/>
</LinearLayout>