<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.buahbatu.jantung.DetailActivity">

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:transitionName="@string/card_transition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/item_image"
                        android:contentDescription="@string/image_condition"
                        android:src="@drawable/boy0"
                        android:layout_width="32dp"
                        android:layout_height="32dp" />
                    <LinearLayout
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/item_name"
                            android:text="@string/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/item_id"
                            android:text="@string/device_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/item_rate"
                            android:text="82"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="BPM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:visibility="gone"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

</LinearLayout>
